--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,10 +12,10 @@ spring:
           filters: stat
           driver-class-name: com.mysql.jdbc.Driver
           #基本属性
-          url: jdbc:mysql://47.104.192.159:3306/test_zs?useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true
-          #url: jdbc:mysql://localhost:3306/interfacedata?useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true
+          #url: jdbc:mysql://47.104.192.159:3306/test_zs?useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true
+          url: jdbc:mysql://localhost:3306/interfacedata?useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true
           username: root
-          password: 1
+          password: root
           #配置初始化大小/最小/最大
           initial-size: 1
           min-idle: 1
